--- a/Training/DECA_DJ3rd1_AULoss_mrf/config.yaml
+++ b/Training/DECA_DJ3rd1_AULoss_mrf/config.yaml
@@ -9,7 +9,7 @@
 # why:
 # '''
 # pretrained_modelpath: '/ps/scratch/yfeng/Data/Projects-data/DECA-training/training/DECA_SIGGRAPH/pretrain/model.tar'
-output_dir: "Training/DECA_DJ3rd1"
+output_dir: "Training/DECA_DJ3rd1_AULoss_mrf"
 pretrained_modelpath: "/home/cine/Documents/DJ/DECA/data/deca_model.tar"
 dataset:
   batch_size: 8
