--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,9 @@
 ###################
 *.o
 *.so
-
+*.jpg
+events.*
+*.pt
 # Packages #
 ############
 # it's better to unpack these files and commit the raw source
@@ -26,6 +28,7 @@
 ehthumbs.db
 Thumbs.db
 .vscode
+*.t7
 
 # 3D data #
 ############
